--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "build": "electron-packager . --all"
+    "build": "electron-packager . --all",
+    "pack-win64": "asar p C:/Users/SentialX/Desktop/WebExpress/WebExpress-win32-x64/resources/app C:/Users/SentialX/Desktop/WebExpress/WebExpress-win32-x64/resources/app.asar",
+    "pack-win32": "asar p C:/Users/SentialX/Desktop/WebExpress/WebExpress-win32-ia32/resources/app C:/Users/SentialX/Desktop/WebExpress/WebExpress-win32-ia32/resources/app.asar",
+    "pack-linux64": "asar p C:/Users/SentialX/Desktop/WebExpress/WebExpress-linux-x64/resources/app C:/Users/SentialX/Desktop/WebExpress/WebExpress-linux-x64/resources/app.asar",
+    "pack-linux32": "asar p C:/Users/SentialX/Desktop/WebExpress/WebExpress-linux-ia32/resources/app C:/Users/SentialX/Desktop/WebExpress/WebExpress-linux-ia32/resources/app.asar"
   },
   "repository": {
     "type": "git",
@@ -23,7 +27,15 @@
   },
   "homepage": "https://github.com/Sential/WebExpress#readme",
   "devDependencies": {
+    "electron-installer-windows": "^0.2.0",
     "electron-packager": "^7.7.0",
     "electron-prebuilt": "^1.2.0"
-  }
+  },
+  "dependencies": {
+    "asar": "^0.12.2",
+    "electron-packager": "^7.7.0",
+    "electron-installer-windows": "^0.2.0",
+    "electron-prebuilt": "^1.3.4"
+  },
+  "license": "ISC"
 }
