fixed not working www. in search bar

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "internet",
     "browser"
   ],
-  "author": "Sential and Nerhu",
+  "author": "Eryk Rakowski and Mikołaj Palkiewicz",
   "bugs": {
     "url": "https://github.com/Sential/WebExpress/issues"
   },
