--- a/package.json
+++ b/package.json
@@ -1,41 +1,43 @@
 {
-    "name": "WebExpress",
-    "version": "0.0.2",
-    "description": "An advanced Internet browser in Electron",
-    "main": "main.js",
-    "scripts": {
-        "start": "electron .",
-        "build": "electron-packager . --all",
-        "pack-win64": "asar p C:/Users/SentialX/Desktop/WebExpress/WebExpress-win32-x64/resources/app C:/Users/SentialX/Desktop/WebExpress/WebExpress-win32-x64/resources/app.asar",
-        "pack-win32": "asar p C:/Users/SentialX/Desktop/WebExpress/WebExpress-win32-ia32/resources/app C:/Users/SentialX/Desktop/WebExpress/WebExpress-win32-ia32/resources/app.asar",
-        "pack-linux64": "asar p C:/Users/SentialX/Desktop/WebExpress/WebExpress-linux-x64/resources/app C:/Users/SentialX/Desktop/WebExpress/WebExpress-linux-x64/resources/app.asar",
-        "pack-linux32": "asar p C:/Users/SentialX/Desktop/WebExpress/WebExpress-linux-ia32/resources/app C:/Users/SentialX/Desktop/WebExpress/WebExpress-linux-ia32/resources/app.asar"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/Sential/WebExpress.git"
-    },
-    "keywords": [
-        "electron",
-        "webexpress",
-        "internet",
-        "browser"
-    ],
-    "author": "Eryk Rakowski and Mikołaj Palkiewicz",
-    "bugs": {
-        "url": "https://github.com/Sential/WebExpress/issues"
-    },
-    "homepage": "https://github.com/Sential/WebExpress#readme",
-    "devDependencies": {
-        "electron-installer-windows": "^0.2.0",
-        "electron-packager": "^7.7.0",
-        "electron-prebuilt": "^1.2.0"
-    },
-    "dependencies": {
-        "asar": "^0.12.2",
-        "electron-packager": "^7.7.0",
-        "electron-installer-windows": "^0.2.0",
-        "electron-prebuilt": "^1.3.4"
-    },
-    "license": "ISC"
+  "name": "WebExpress",
+  "version": "0.0.2",
+  "description": "An advanced Internet browser in Electron",
+  "main": "main.js",
+  "scripts": {
+    "start": "electron .",
+    "build": "electron-packager . --all",
+    "pack-win64": "asar p C:/Users/SentialX/Desktop/WebExpress/WebExpress-win32-x64/resources/app C:/Users/SentialX/Desktop/WebExpress/WebExpress-win32-x64/resources/app.asar",
+    "pack-win32": "asar p C:/Users/SentialX/Desktop/WebExpress/WebExpress-win32-ia32/resources/app C:/Users/SentialX/Desktop/WebExpress/WebExpress-win32-ia32/resources/app.asar",
+    "pack-linux64": "asar p C:/Users/SentialX/Desktop/WebExpress/WebExpress-linux-x64/resources/app C:/Users/SentialX/Desktop/WebExpress/WebExpress-linux-x64/resources/app.asar",
+    "pack-linux32": "asar p C:/Users/SentialX/Desktop/WebExpress/WebExpress-linux-ia32/resources/app C:/Users/SentialX/Desktop/WebExpress/WebExpress-linux-ia32/resources/app.asar"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Sential/WebExpress.git"
+  },
+  "keywords": [
+    "electron",
+    "webexpress",
+    "internet",
+    "browser"
+  ],
+  "author": "Eryk Rakowski and Mikołaj Palkiewicz",
+  "bugs": {
+    "url": "https://github.com/Sential/WebExpress/issues"
+  },
+  "homepage": "https://github.com/Sential/WebExpress#readme",
+  "devDependencies": {
+    "electron-installer-windows": "^0.2.0",
+    "electron-packager": "^7.7.0",
+    "electron-prebuilt": "^1.2.0",
+    "is-there": "^4.3.3",
+    "node-dir": "^0.1.16"
+  },
+  "dependencies": {
+    "asar": "^0.12.2",
+    "electron-packager": "^7.7.0",
+    "electron-installer-windows": "^0.2.0",
+    "electron-prebuilt": "^1.3.4"
+  },
+  "license": "ISC"
 }
