--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "WebExpress",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "An advanced Internet browser in Electron",
   "main": "main.js",
   "scripts": {
@@ -29,7 +29,7 @@
   "devDependencies": {
     "electron-installer-windows": "^0.2.0",
     "electron-packager": "^7.7.0",
-    "electron-prebuilt": "^1.2.0",
+    "electron": "^1.4.5",
     "is-there": "^4.3.3",
     "node-dir": "^0.1.16"
   },
@@ -37,7 +37,7 @@
     "asar": "^0.12.2",
     "electron-packager": "^7.7.0",
     "electron-installer-windows": "^0.2.0",
-    "electron-prebuilt": "^1.3.4"
+    "electron": "^1.4.5"
   },
   "license": "ISC"
 }
