--- a/package.json
+++ b/package.json
@@ -32,8 +32,9 @@
   },
   "dependencies": {
     "asar": "^0.12.2",
+    "electron": "^1.4.7",
     "electron-packager": "^7.7.0",
-    "electron": "^1.4.7"
+    "electron-window-state": "^4.0.0"
   },
   "license": "MIT"
 }
