--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "electron": "^1.4.7",
     "electron-connect": "^0.6.1",
     "electron-packager": "^7.7.0",
+    "get-pixels": "^3.3.0",
     "gulp": "^3.9.1",
     "is-there": "^4.3.3",
     "node-dir": "^0.1.16"
